// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-7veum2,
[data-css-7veum2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-7veum2::before,
[data-css-7veum2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-7veum2::after,
[data-css-7veum2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<StyledSpan>
  <span
    className="css-7veum2"
  />
</StyledSpan>
`;

exports[`enzyme.mount 2`] = `
.css-uzxhyw,
[data-css-uzxhyw] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-uzxhyw::before,
[data-css-uzxhyw]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-uzxhyw::after,
[data-css-uzxhyw]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<StyledSpan
  open={true}
>
  <span
    className="css-uzxhyw"
  />
</StyledSpan>
`;

exports[`enzyme.render 1`] = `
.css-7veum2,
[data-css-7veum2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-7veum2::before,
[data-css-7veum2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-7veum2::after,
[data-css-7veum2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<span
  class="css-7veum2"
/>
`;

exports[`enzyme.render 2`] = `
.css-uzxhyw,
[data-css-uzxhyw] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-uzxhyw::before,
[data-css-uzxhyw]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-uzxhyw::after,
[data-css-uzxhyw]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<span
  class="css-uzxhyw"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-7veum2,
[data-css-7veum2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-7veum2::before,
[data-css-7veum2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-7veum2::after,
[data-css-7veum2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<span
  className="css-7veum2"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-uzxhyw,
[data-css-uzxhyw] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-uzxhyw::before,
[data-css-uzxhyw]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #FEBA00;
  position: absolute;
  content: "";
}

.css-uzxhyw::after,
[data-css-uzxhyw]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #FEBA00;
  position: absolute;
  content: "";
}

<span
  className="css-uzxhyw"
/>
`;
